# community-matchmaking

./: .gitignore  Cargo.toml  matchmaking.toml
src/: main.rs  matchmaking.rs  state.rs  stateless.rs
src/stateful/: messages.rs  mod.rs  util.rs
src/stateless/: mod.rs
