[package]
name = "community-matchmaking"
version = "0.1.0"
authors = ["Alexander Hill <CodeBreadpudding@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
a2s = "0.2.2"
bitbuffer = "0.8.1"
crc = "1.8.1"
toml = "0.5.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
