[package]
name = "community-matchmaking"
version = "0.1.0"
authors = ["Alexander Hill <CodeBreadpudding@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
a2s = "0.2.2"
bitbuffer = "0.8.1"
chrono = "0.4.19"
crc = "1.8.1"
fern = "0.6.0"
log = "0.4.14"
snap = "1.0.4"
toml = "0.5.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
